--- a/Python_Script_2_Quality_Assessement.ipynb
+++ b/Python_Script_2_Quality_Assessement.ipynb
@@ -439,7 +439,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv(r'C:\\Users\\MS\\OneDrive\\Studium\\Geographie\\Geo-BA\\Data\\Classification\\Quality\\Quality_7K_with_metrics.csv', index=False)"
+    "df.to_csv(r'export_path', index=False)"
    ]
   },
   {
@@ -458,7 +458,7 @@
    "outputs": [],
    "source": [
     "# load the data in case yout start here\n",
-    "df_qa = pd.read_csv(r'C:\\Users\\MS\\OneDrive\\Studium\\Geographie\\Geo-BA\\Data\\Classification\\Quality\\Quality_7K_with_metrics.csv', delimiter=',')"
+    "df_qa = pd.read_csv(r'export_path', delimiter=',')"
    ]
   },
   {
@@ -556,7 +556,7 @@
    "outputs": [],
    "source": [
     "# export table\n",
-    "quality_stats.to_csv(r'C:\\Users\\MS\\OneDrive\\Studium\\Geographie\\Geo-BA\\Data\\Classification\\Quality\\Quality_7K_statistics.csv')"
+    "quality_stats.to_csv(r'export_path')"
    ]
   },
   {
